--- a/arc.html
+++ b/arc.html
@@ -47,13 +47,13 @@
     </div>
     <div id="loading-cover">
         <div id="unity-loading-bar">
-            <div id="unity-logo"><img src="/aa.png"></div>
+            <div id="unity-logo"><img src="../aa.png"></div>
             <div class="progress-spinner-container">
-                <div class="spinner-left"><img src="https://cdn.jsdelivr.net/gh/images-classroom-sources/ok@main/spinner.png"></div>
+                <div class="spinner-left"><img src=""></div>
                 <div id="unity-progress-bar-empty">
                     <div id="unity-progress-bar-full"></div>
                 </div>
-                <div class="spinner-right"><img src="https://cdn.jsdelivr.net/gh/images-classroom-sources/ok@main/spinner.png"></div>
+                <div class="spinner-right"><img src=""></div>
             </div>
         </div>
     </div>
