--- a/arc.html
+++ b/arc.html
@@ -47,13 +47,11 @@
     </div>
     <div id="loading-cover">
         <div id="unity-loading-bar">
-            <div id="unity-logo"><img src="../aa.png"></div>
+            <div id="unity-logo"><img src="/logo.png"></div>
             <div class="progress-spinner-container">
-                <div class="spinner-left"><img src=""></div>
                 <div id="unity-progress-bar-empty">
                     <div id="unity-progress-bar-full"></div>
                 </div>
-                <div class="spinner-right"><img src=""></div>
             </div>
         </div>
     </div>
