--- a/arc.html
+++ b/arc.html
@@ -47,7 +47,7 @@
     </div>
     <div id="loading-cover">
         <div id="unity-loading-bar">
-            <div id="unity-logo"><img src="/logo.png"></div>
+            <div id="unity-logo"><img src="/g-/logo.png"></div>
             <div class="progress-spinner-container">
                 <div id="unity-progress-bar-empty">
                     <div id="unity-progress-bar-full"></div>
