--- a/arc.html
+++ b/arc.html
@@ -10,6 +10,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>google.com</title>
+    <h1>Please wait...</h1>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/images-classroom-sources/ok@main/style.css">
     <!-- GameMonetize SDK Entegrasyonu -->
     <script type="text/javascript">
@@ -47,10 +48,11 @@
     </div>
     <div id="loading-cover">
         <div id="unity-loading-bar">
-            <div id="unity-logo"><img src="/g-/logo.png"></div>
+            
             <div class="progress-spinner-container">
                 <div id="unity-progress-bar-empty">
                     <div id="unity-progress-bar-full"></div>
+            <div id="unity-logo"><img src="/g-/logo.png"></div>
                 </div>
             </div>
         </div>
